<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="32dp"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/et_firstNum"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/et_secondNum"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_calculate"
            android:textSize="30sp"
            android:text="add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button
            android:id="@+id/btn_divide"
            android:textSize="30sp"
            android:text="divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>